tests/negative/test_data_glob_not_def_init.orb
data Foo;

let f:Foo;

fnc main() () {
};